# talk-loco-commands-rs

./: .gitignore  Cargo.toml  LICENSE  readme.md
bson-data-derive/: Cargo.toml
bson-data-derive/src/: lib.rs
src/: lib.rs  session.rs  stream.rs
src/command/: manager.rs  mod.rs  session.rs
src/request/: mod.rs  ping.rs
src/request/booking/: get_conf.rs  mod.rs
src/request/chat/: chat_info.rs  chat_on_room.rs  delete_msg.rs  get_mem.rs  l_chat_list.rs  leave.rs  login_list.rs  member.rs  mod.rs  noti_read.rs  set_meta.rs  set_st.rs  sync_msg.rs  update_chat.rs  write.rs
src/request/checkin/: buy_cs.rs  checkin.rs  mod.rs
src/response/: mod.rs
src/response/booking/: get_conf.rs  mod.rs
src/response/chat/: change_svr.rs  chat_info.rs  chat_on_room.rs  chg_meta.rs  decun_read.rs  delete_msg.rs  get_mem.rs  kickout.rs  l_chat_list.rs  leave.rs  left.rs  login_list.rs  member.rs  mod.rs  msg.rs  new_mem.rs  set_meta.rs  set_st.rs  sync.rs  sync_msg.rs  update_chat.rs
src/response/checkin/: buy_cs.rs  checkin.rs  mod.rs
src/structs/: chat.rs  chatroom.rs  client.rs  connection.rs  mod.rs  openlink.rs  user.rs
talk-loco-commands/: Cargo.toml
talk-loco-commands-derive/: Cargo.toml  readme.md
talk-loco-commands/src/: lib.rs
talk-loco-commands/src/request/chat/: chat_info.rs  delete_msg.rs  get_mem.rs  leave.rs  login_list.rs  member.rs  mod.rs  noti_read.rs  set_st.rs  sync_msg.rs  update_chat.rs
talk-loco-commands/src/request/checkin/: buy_cs.rs  checkin.rs
talk-loco-commands/src/request/media/: mod.rs
talk-loco-commands/src/response/chat/: chat_info.rs  chg_meta.rs  decun_read.rs  delete_msg.rs  get_mem.rs  kickout.rs  l_chat_list.rs  leave.rs  member.rs  msg.rs  new_mem.rs  set_st.rs  sync_msg.rs  update_chat.rs
talk-loco-commands/src/structs/: chatroom.rs
