[package]
name = "talk-loco-commands"
version = "0.1.0"
license = "MIT"
keywords = ["talk", "loco"]
readme = "readme.md"
description = "Official Loco command set"
repository = "https://github.com/storycraft/talk-loco-commands-rs"
authors = ["storycraft <storycraft@pancake.sh>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bson = "1.1.0"
loco-protocol = "1.0.0"
bson-data-derive = { path = "./bson-data-derive" }
openssl = "0.10.30"