[package]
name = "talk-loco-commands"
version = "0.4.0"
license = "MIT"
keywords = ["talk", "loco"]
readme = "readme.md"
description = "Official Loco command set"
repository = "https://github.com/storycraft/talk-loco-commands-rs"
authors = ["storycraft <storycraft@pancake.sh>"]
edition = "2018"

[features]
wasm = ["loco-protocol/wasm"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bson = "1.1.0"
loco-protocol = "2.0.2"

[dev-dependencies]
rsa = "0.5.0"
pem = "0.8"
